[gd_scene load_steps=11 format=3 uid="uid://cjeqayij4shr4"]

[ext_resource type="Script" path="res://assets/scripts/cultist_walking.gd" id="1_2rhdr"]
[ext_resource type="Texture2D" uid="uid://d2wpgfn5moccc" path="res://textures/characters/cultist/cultist.png" id="2_fjo6a"]
[ext_resource type="Texture2D" uid="uid://fbxgj1q0rfmb" path="res://textures/objects/particle.png" id="2_vpj3u"]

[sub_resource type="Gradient" id="Gradient_67xay"]
offsets = PackedFloat32Array(0.663934, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_aosor"]
gradient = SubResource("Gradient_67xay")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_64tx2"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 30.0
direction = Vector3(0, 0, 0)
initial_velocity_min = -100.0
initial_velocity_max = 100.0
gravity = Vector3(0, 0, 0)
scale_min = 0.5
color_ramp = SubResource("GradientTexture1D_aosor")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yhfrp"]
size = Vector2(20, 57)

[sub_resource type="SpriteFrames" id="SpriteFrames_pmdv0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_fjo6a")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hxmxs"]
size = Vector2(30, 62.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nmbvn"]
size = Vector2(20, 3)

[node name="CultistWalking" type="CharacterBody2D" groups=["cultist", "puffTarget", "riding"]]
collision_mask = 19
platform_on_leave = 2
platform_floor_layers = 4294967040
script = ExtResource("1_2rhdr")
metadata/enemy = true

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
modulate = Color(0.843137, 0, 0, 1)
position = Vector2(-0.5147, -0.176777)
emitting = false
amount = 40
process_material = SubResource("ParticleProcessMaterial_64tx2")
texture = ExtResource("2_vpj3u")
lifetime = 0.5
speed_scale = 0.35

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_yhfrp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_pmdv0")

[node name="GroundCheck" type="RayCast2D" parent="."]
position = Vector2(18, 12)
target_position = Vector2(0, 20)
collision_mask = 145

[node name="WallCheck" type="RayCast2D" parent="."]
position = Vector2(21, -30)
target_position = Vector2(0, 61)
collision_mask = 17
hit_from_inside = true

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -0.25)
shape = SubResource("RectangleShape2D_hxmxs")

[node name="TopCol" type="CharacterBody2D" parent="." groups=["strong"]]
position = Vector2(0, -28)
collision_mask = 16
platform_on_leave = 2
platform_floor_layers = 4294967280
metadata/enemy = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopCol"]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_nmbvn")

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="input_event" from="Hitbox" to="." method="_on_hitbox_input_event"]
